--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "offerwallmonetization",
   "version": "0.1.0",
-  "homepage": "https://offerwallmonetization.com",
+  "homepage": "https://smatched.io",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
@@ -13,7 +13,7 @@
     "firebase": "^10.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
