--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "offerwallmonetization",
   "version": "0.1.0",
-  "homepage": "https://smatched.io",
+  "homepage": "https://davijaca.github.io/smatched.io/",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
