--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "offerwallmonetization",
   "version": "0.1.0",
-  "homepage": "https://davijaca.github.io/smatched.io/",
-  "private": false,
+  "homepage": "https://smatched.io",
+  "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@emailjs/browser": "^3.11.0",
