--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-ga4": "^2.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
