--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-snap": "^1.23.0",
     "react-text-truncate": "^0.19.0",
     "web-vitals": "^2.1.4"
   },
@@ -26,7 +27,8 @@
     "start": "set PORT=3000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": [
