--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "offerwallmonetization",
+  "name": "smatched.io",
   "version": "0.1.0",
   "homepage": "https://smatched.io",
   "private": true,
@@ -10,7 +10,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "emailjs": "^4.0.3",
-    "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
