Content currently on GitLab repo

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "smatched.io",
   "version": "0.1.0",
-  "homepage": "https://smatched.io",
+  "homepage": "https://www.getmonetize.io/",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@emailjs/browser": "^3.11.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.9.2",
     "emailjs": "^4.0.3",
     "firebase": "^10.8.0",
     "react": "^18.2.0",
@@ -25,6 +25,13 @@
     "schema-dts": "^1.1.2",
     "web-vitals": "^2.1.4"
   },
+
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2"
+  },
+
   "scripts": {
     "start": "set PORT=3000 && react-scripts start",
     "build": "react-scripts build",
